Code review fixes, clarify multi-cloud support